--- a/pom.xml
+++ b/pom.xml
@@ -5,10 +5,10 @@
 	<artifactId>op-east-blue</artifactId>
 	<version>0.0.1-SNAPSHOT</version>
 	<packaging>pom</packaging>
-<!-- 	<modules> -->
-<!-- 		<module>op-east-blue-dawn-island</module> -->
-<!-- 		<module>op-east-blue-shells-town</module> -->
-<!-- 	</modules> -->
+ 	<modules>
+ 		<module>op-east-blue-dawn-island</module>
+ 		<module>op-east-blue-shells-town</module>
+ 	</modules>
 
 	<properties>
 		<spring.version>3.2.0.RELEASE</spring.version>
