--- a/op-east-blue-shells-town/pom.xml
+++ b/op-east-blue-shells-town/pom.xml
@@ -11,6 +11,16 @@
 	<packaging>war</packaging>
 	<name>SpringData-JPA-Jersey</name>
 	<dependencies>
+        <dependency>
+            <groupId>org.springframework</groupId>
+            <artifactId>spring-web</artifactId>
+            <version>${spring.version}</version>
+        </dependency>
+        <dependency>
+			<groupId>org.hsqldb</groupId>
+			<artifactId>hsqldb</artifactId>
+			<version>2.2.4</version>        
+        </dependency>
 		<dependency>
 			<groupId>com.sun.jersey</groupId>
 			<artifactId>jersey-server</artifactId>
